--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 					<div>
 						<img src="./images/KKD.png" alt="크리스피크림 로고" />
 						<h2>크리스피크림 도넛</h2>
+						<p class="line"></p>
 					</div>
 					<nav>
 						<ul class="gnb">
